@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.lang.reflect.Array;
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -87,7 +86,6 @@ import org.geotools.metadata.iso.citation.Citations;
 import org.geotools.referencing.CRS;
 import org.geotools.styling.UserLayer;
 import org.geotools.util.Converters;
-import org.geotools.util.URLs;
 import org.geotools.util.Utilities;
 import org.geotools.util.factory.Hints;
 import org.locationtech.jts.geom.Coordinate;
@@ -256,8 +254,8 @@ public class DataUtilities {
 
         typeEncode.put(MultiLineString.class, "MultiLineString");
         typeMap.put("MultiLineString", MultiLineString.class);
-        typeMap.put("com.vividsolutions.jts.geom.MultiPoint", MultiLineString.class);
-        typeMap.put("org.locationtech.jts.geom.MultiPoint", MultiLineString.class);
+        typeMap.put("com.vividsolutions.jts.geom.MultiLineString", MultiLineString.class);
+        typeMap.put("org.locationtech.jts.geom.MultiLineString", MultiLineString.class);
 
         typeEncode.put(MultiPolygon.class, "MultiPolygon");
         typeMap.put("MultiPolygon", MultiPolygon.class);
@@ -276,7 +274,6 @@ public class DataUtilities {
     /**
      * Retrieve the attributeNames defined by the featureType
      *
-     * @param featureType
      * @return array of simple attribute names
      */
     public static String[] attributeNames(SimpleFeatureType featureType) {
@@ -286,16 +283,6 @@ public class DataUtilities {
             names[i] = featureType.getDescriptor(i).getLocalName();
         }
         return names;
-    }
-
-    /** @deprecated Use {@link URLs#fileToUrl(File)} */
-    public static URL fileToURL(File file) {
-        return URLs.fileToUrl(file);
-    }
-
-    /** @deprecated Use {@link URLs#urlToFile(URL)} */
-    public static File urlToFile(URL url) {
-        return URLs.urlToFile(url);
     }
 
     /**
@@ -389,6 +376,47 @@ public class DataUtilities {
      * Compare attribute coverage between two feature types (allowing the identification of
      * subTypes).
      *
+     * <p>Strict compatibility is assumed meaning that both the local name and java binding are
+     * compatible (see {@link #compareInternal(SimpleFeatureType, SimpleFeatureType, boolean)} for
+     * more details.
+     *
+     * <p>Namespace is not considered in this operations. You may still need to reType to get the
+     * correct namespace, or reorder.
+     *
+     * <p>Please note this method will not result in a stable sort if used in a {@link Comparator}
+     * as -1 is used to indicate incompatiblity (rather than simply "before").
+     *
+     * @param typeA FeatureType being compared
+     * @param typeB FeatureType being compared against
+     */
+    public static int compare(SimpleFeatureType typeA, SimpleFeatureType typeB) {
+        return compareInternal(typeA, typeB, true);
+    }
+
+    /**
+     * Compare attribute coverage between two feature types (allowing the identification of
+     * subTypes).
+     *
+     * <p>loose compatibility is assumed based on local name (java binding may differ) (see {@link
+     * #compareInternal(SimpleFeatureType, SimpleFeatureType, boolean)} for more details.
+     *
+     * <p>Namespace is not considered in this operations. You may still need to reType to get the
+     * correct namespace, or reorder.
+     *
+     * <p>Please note this method will not result in a stable sort if used in a {@link Comparator}
+     * as -1 is used to indicate incompatiblity (rather than simply "before").
+     *
+     * @param typeA FeatureType being compared
+     * @param typeB FeatureType being compared against
+     */
+    public static int compareNames(SimpleFeatureType typeA, SimpleFeatureType typeB) {
+        return compareInternal(typeA, typeB, false);
+    }
+
+    /**
+     * Compare attribute coverage between two feature types (allowing the identification of
+     * subTypes).
+     *
      * <p>The comparison results in a number with the following meaning:
      *
      * <ul>
@@ -398,19 +426,21 @@ public class DataUtilities {
      * </ul>
      *
      * <p>Comparison is based on {@link AttributeDescriptor} - the {@link
-     * #isMatch(AttributeDescriptor, AttributeDescriptor)} method is used to quickly confirm that
-     * the local name and java binding are compatible.
+     * #isMatch(AttributeDescriptor, AttributeDescriptor, boolean)} method is used to quickly
+     * confirm that the local name and java binding (depending on strict flag value) are compatible.
      *
-     * <p>Namespace is not considered in this opperations. You may still need to reType to get the
-     * correct namesapce, or reorder.
+     * <p>Namespace is not considered in this operations. You may still need to reType to get the
+     * correct namespace, or reorder.
      *
      * <p>Please note this method will not result in a stable sort if used in a {@link Comparator}
      * as -1 is used to indicate incompatiblity (rather than simply "before").
      *
-     * @param typeA FeatureType beind compared
+     * @param typeA FeatureType being compared
      * @param typeB FeatureType being compared against
+     * @param strict flag controlling the comparison check
      */
-    public static int compare(SimpleFeatureType typeA, SimpleFeatureType typeB) {
+    protected static int compareInternal(
+            SimpleFeatureType typeA, SimpleFeatureType typeB, boolean strict) {
         if (typeA == typeB) {
             return 0;
         }
@@ -437,9 +467,9 @@ public class DataUtilities {
         for (int i = 0; i < countA; i++) {
             a = typeA.getDescriptor(i);
 
-            if (isMatch(a, typeB.getDescriptor(i))) {
+            if (isMatch(a, typeB.getDescriptor(i), strict)) {
                 match++;
-            } else if (!isMatch(a, typeB.getDescriptor(a.getLocalName()))) {
+            } else if (!isMatch(a, typeB.getDescriptor(a.getLocalName()), strict)) {
                 // cannot find any match for Attribute in typeA
                 return -1;
             }
@@ -458,13 +488,31 @@ public class DataUtilities {
      * Quickly check if two descriptors are at all compatible.
      *
      * <p>This method checks the descriptors name and class binding to see if the values have any
-     * chance of being compatible.
+     * chance of being compatible. Strict compatibility assumed (see also {@link
+     * #isMatch(AttributeDescriptor, AttributeDescriptor, boolean)}.
      *
      * @param a descriptor to compare
      * @param b descriptor to compare
      * @return true to the descriptors name and binding class match
      */
     public static boolean isMatch(AttributeDescriptor a, AttributeDescriptor b) {
+        return isMatch(a, b, true);
+    }
+
+    /**
+     * Quickly check descriptors compatibility.
+     *
+     * <p>This method checks the descriptors name and class binding to see if the values have any
+     * chance of being compatible.
+     *
+     * @param a descriptor to compare
+     * @param b descriptor to compare
+     * @param strict if true both descriptor name and class binding is checked otherwise a more
+     *     loose form o compatibility is assumed where equality is determined by descriptor name
+     *     only
+     * @return true if compatibility comparison succeeds
+     */
+    public static boolean isMatch(AttributeDescriptor a, AttributeDescriptor b, boolean strict) {
         if (a == b) {
             return true;
         }
@@ -481,8 +529,15 @@ public class DataUtilities {
             return true;
         }
 
-        if (a.getLocalName().equals(b.getLocalName()) && a.getClass().equals(b.getClass())) {
-            return true;
+        if (strict) {
+            if (a.getLocalName().equals(b.getLocalName())
+                    && a.getType().getBinding().equals(b.getType().getBinding())) {
+                return true;
+            }
+        } else {
+            if (a.getLocalName().equals(b.getLocalName())) {
+                return true;
+            }
         }
 
         return false;
@@ -537,11 +592,7 @@ public class DataUtilities {
      *
      * <p>
      *
-     * @param featureType
-     * @param feature
      * @param duplicate True to perform {@link #duplicate(Object)} on each attribute
-     * @return
-     * @throws IllegalAttributeException
      */
     public static SimpleFeature reType(
             SimpleFeatureType featureType, SimpleFeature feature, boolean duplicate)
@@ -716,8 +767,6 @@ public class DataUtilities {
      * <p>The {@link #defaultValues(SimpleFeatureType)} method is used to generate the intial values
      * (making use of {@link AttributeDescriptor#getDefaultValue()} as required.
      *
-     * @param featureType
-     * @param featureID
      * @return Craeted feature
      */
     public static SimpleFeature template(SimpleFeatureType featureType, String featureID) {
@@ -727,7 +776,6 @@ public class DataUtilities {
     /**
      * Produce a set of default values for the provided FeatureType
      *
-     * @param featureType
      * @return Array of values, that are good starting point for data entry
      */
     public static Object[] defaultValues(SimpleFeatureType featureType) {
@@ -738,8 +786,6 @@ public class DataUtilities {
      * Create a new feature from the provided values, using appropriate default values for any nulls
      * provided.
      *
-     * @param featureType
-     * @param providedValues
      * @return newly created feature
      * @throws ArrayIndexOutOfBoundsException If the number of provided values does not match the
      *     featureType
@@ -753,8 +799,6 @@ public class DataUtilities {
      * Create a new feature from the provided values, using appropriate default values for any nulls
      * provided.
      *
-     * @param featureType
-     * @param featureID
      * @param providedValues provided attributes
      * @return newly created feature
      * @throws ArrayIndexOutOfBoundsException If the number of provided values does not match the
@@ -769,8 +813,6 @@ public class DataUtilities {
     /**
      * Create default values matching the provided feature type.
      *
-     * @param featureType
-     * @param values
      * @return set of default values
      * @throws ArrayIndexOutOfBoundsException If the number of provided values does not match the
      *     featureType
@@ -788,26 +830,6 @@ public class DataUtilities {
         }
 
         return values;
-    }
-
-    /**
-     * Provides a defautlValue for attributeType.
-     *
-     * <p>Will return null if attributeType isNillable(), or attempt to use Reflection, or
-     * attributeType.parse( null )
-     *
-     * @param attributeType
-     * @return null for nillable attributeType, attempt at reflection
-     * @deprecated Please {@link AttributeDescriptor#getDefaultValue()}
-     */
-    public static Object defaultValue(AttributeDescriptor attributeType)
-            throws IllegalAttributeException {
-        Object value = attributeType.getDefaultValue();
-
-        if (value == null && !attributeType.isNillable()) {
-            return null; // sometimes there is no valid default value :-(
-        }
-        return value;
     }
 
     /**
@@ -834,9 +856,6 @@ public class DataUtilities {
      *   <li>JTS Geometries
      *   <li>Arrays - will return an empty array of the appropriate type
      * </ul>
-     *
-     * @param type
-     * @return
      */
     public static Object defaultValue(Class type) {
         if (type == String.class || type == Object.class) {
@@ -846,7 +865,7 @@ public class DataUtilities {
             return Integer.valueOf(0);
         }
         if (type == Double.class) {
-            return new Double(0);
+            return Double.valueOf(0);
         }
         if (type == Long.class) {
             return Long.valueOf(0);
@@ -855,7 +874,7 @@ public class DataUtilities {
             return Short.valueOf((short) 0);
         }
         if (type == Float.class) {
-            return new Float(0.0f);
+            return Float.valueOf(0.0f);
         }
         if (type == BigDecimal.class) {
             return BigDecimal.valueOf(0);
@@ -864,7 +883,7 @@ public class DataUtilities {
             return BigInteger.valueOf(0);
         }
         if (type == Character.class) {
-            return new Character(' ');
+            return Character.valueOf(' ');
         }
         if (type == Boolean.class) {
             return Boolean.FALSE;
@@ -918,6 +937,9 @@ public class DataUtilities {
         if (type.isArray()) {
             return Array.newInstance(type.getComponentType(), 0);
         }
+        if (type == Geometry.class) { // return a point as default coordinate
+            return fac.createGeometry(point);
+        }
 
         throw new IllegalArgumentException(type + " is not supported by this method");
     }
@@ -968,8 +990,6 @@ public class DataUtilities {
      *
      * @param featureArray Array of features
      * @return FeatureSource
-     * @throws IOException
-     * @throws RuntimeException
      */
     public static SimpleFeatureSource source(final SimpleFeature[] featureArray) {
         final SimpleFeatureType featureType;
@@ -1101,9 +1121,32 @@ public class DataUtilities {
      * @return FeatureRedaer over the provided contents
      * @throws IOException IOException if there is any problem reading the content.
      */
-    public static FeatureReader<SimpleFeatureType, SimpleFeature> reader(
+    public static SimpleFeatureReader reader(
             FeatureCollection<SimpleFeatureType, SimpleFeature> collection) throws IOException {
-        return reader(collection.toArray(new SimpleFeature[collection.size()]));
+        @SuppressWarnings("PMD.CloseResource") // wrapped and returned
+        final FeatureIterator<SimpleFeature> it = collection.features();
+        return new SimpleFeatureReader() {
+            @Override
+            public SimpleFeatureType getFeatureType() {
+                return collection.getSchema();
+            }
+
+            @Override
+            public SimpleFeature next()
+                    throws IOException, IllegalArgumentException, NoSuchElementException {
+                return it.next();
+            }
+
+            @Override
+            public boolean hasNext() throws IOException {
+                return it.hasNext();
+            }
+
+            @Override
+            public void close() throws IOException {
+                it.close();
+            }
+        };
     }
 
     /**
@@ -1163,7 +1206,6 @@ public class DataUtilities {
     /**
      * Obtain the first feature from the collection as an exemplar.
      *
-     * @param featureCollection
      * @return first feature from the featureCollection
      */
     public static <F extends Feature> F first(FeatureCollection<?, F> featureCollection) {
@@ -1284,7 +1326,6 @@ public class DataUtilities {
      * @param featureType FeatureType being converted
      * @return SimpleFeatureType created by stripping any complicated content from the provided
      *     featureType
-     * @throws DataSourceException
      */
     public static SimpleFeatureType simple(final FeatureType featureType)
             throws DataSourceException {
@@ -1353,7 +1394,11 @@ public class DataUtilities {
                 SimpleFeatureTypeBuilder build = new SimpleFeatureTypeBuilder();
                 build.setName(featureType.getName());
                 build.setAttributes(simpleAttributes);
-                build.setDefaultGeometry(featureType.getGeometryDescriptor().getLocalName());
+
+                GeometryDescriptor defaultGeometry = featureType.getGeometryDescriptor();
+                if (defaultGeometry != null) {
+                    build.setDefaultGeometry(defaultGeometry.getLocalName());
+                }
 
                 simpleFeatureType = build.buildFeatureType();
             }
@@ -1388,7 +1433,6 @@ public class DataUtilities {
     /**
      * Copies the provided features into a List.
      *
-     * @param featureCollection
      * @return List of features copied into memory
      */
     public static <F extends Feature> List<F> list(FeatureCollection<?, F> featureCollection) {
@@ -1407,7 +1451,6 @@ public class DataUtilities {
     /**
      * Copies the provided fetaures into a List.
      *
-     * @param featureCollection
      * @param maxFeatures Maximum number of features to load
      * @return List of features copied into memory
      */
@@ -1429,7 +1472,6 @@ public class DataUtilities {
      * Iteator wrapped around the provided FeatureIterator, implementing {@link Closeable}.
      *
      * @see #close(Iterator)
-     * @param featureIterator
      * @return Iterator wrapped around provided FeatureIterator, implements Closeable
      */
     public static <F extends Feature> Iterator<F> iterator(FeatureIterator<F> featureIterator) {
@@ -1440,9 +1482,6 @@ public class DataUtilities {
      * Copies the feature ids from each and every feature into a set.
      *
      * <p>This method can be slurp an in memory record of the contents of a
-     *
-     * @param featureCollection
-     * @return
      */
     public static Set<String> fidSet(FeatureCollection<?, ?> featureCollection) {
         final HashSet<String> fids = new HashSet<String>();
@@ -1464,7 +1503,6 @@ public class DataUtilities {
     /**
      * Used to quickly cast to a java.util.Collection.
      *
-     * @param featureCollection
      * @return Collection
      */
     @SuppressWarnings("unchecked")
@@ -1623,7 +1661,6 @@ public class DataUtilities {
      * @param properties If null, every property of the featureType in input will be used
      * @param override Intended CoordinateReferenceSystem, if null original will be used
      * @return derived FeatureType
-     * @throws SchemaException
      */
     public static SimpleFeatureType createSubType(
             SimpleFeatureType featureType, String[] properties, CoordinateReferenceSystem override)
@@ -1649,7 +1686,6 @@ public class DataUtilities {
      * @param typeName Type name override
      * @param namespace Namespace override
      * @return derived FeatureType
-     * @throws SchemaException
      */
     public static SimpleFeatureType createSubType(
             SimpleFeatureType featureType,
@@ -1729,10 +1765,7 @@ public class DataUtilities {
     /**
      * Create a type limited to the named properties provided.
      *
-     * @param featureType
-     * @param properties
      * @return type limited to the named properties provided
-     * @throws SchemaException
      */
     public static SimpleFeatureType createSubType(
             SimpleFeatureType featureType, String[] properties) throws SchemaException {
@@ -1825,7 +1858,6 @@ public class DataUtilities {
      *
      * @param typeName identification of FeatureType: (<i>namesapce</i>).<i>typeName</i>
      * @param typeSpec Specification of FeatureType attributes "name:Type,name2:Type2,..."
-     * @throws SchemaException
      */
     public static SimpleFeatureType createType(String typeName, String typeSpec)
             throws SchemaException {
@@ -1844,7 +1876,6 @@ public class DataUtilities {
      * @param namespace Typename namespace used to qualify the provided name
      * @param name Typename name, as qualified by namespace
      * @param typeSpec Definition of attributes, for details see {@link #createType(String, String)}
-     * @throws SchemaException
      */
     public static SimpleFeatureType createType(String namespace, String name, String typeSpec)
             throws SchemaException {
@@ -1888,7 +1919,6 @@ public class DataUtilities {
      *
      * <p>For more information please review the PropertyDataStore tutorials.
      *
-     * @param featureType
      * @return String representation of featureType suitable for use with {@link #createType}
      */
     public static String encodeType(SimpleFeatureType featureType) {
@@ -1917,7 +1947,6 @@ public class DataUtilities {
      * <p>
      *
      * @see CRS#lookupEpsgCode(CoordinateReferenceSystem, boolean) for full search
-     * @param crs
      * @return srid or -1 if not found
      */
     private static int toSRID(CoordinateReferenceSystem crs) {
@@ -1938,45 +1967,6 @@ public class DataUtilities {
         return -1;
     }
 
-    /**
-     * A "quick" String representation of a FeatureType.
-     *
-     * <p>This string representation may be used with createType( name, spec ).
-     *
-     * @param featureType FeatureType to represent
-     * @return The string "specification" for the featureType
-     * @deprecated Renamed to {@link #encodeType} for concistency with {@link #createType}
-     */
-    public static String spec(FeatureType featureType) {
-        Collection<PropertyDescriptor> types = featureType.getDescriptors();
-        StringBuffer buf = new StringBuffer();
-
-        for (PropertyDescriptor type : types) {
-            buf.append(type.getName().getLocalPart());
-            buf.append(":");
-            buf.append(typeMap(type.getType().getBinding()));
-            if (type instanceof GeometryDescriptor) {
-                GeometryDescriptor gd = (GeometryDescriptor) type;
-                if (gd.getCoordinateReferenceSystem() != null
-                        && gd.getCoordinateReferenceSystem().getIdentifiers() != null) {
-                    for (Iterator<ReferenceIdentifier> it =
-                                    gd.getCoordinateReferenceSystem().getIdentifiers().iterator();
-                            it.hasNext(); ) {
-                        ReferenceIdentifier id = it.next();
-
-                        if ((id.getAuthority() != null)
-                                && id.getAuthority().getTitle().equals(Citations.EPSG.getTitle())) {
-                            buf.append(":srid=" + id.getCode());
-                            break;
-                        }
-                    }
-                }
-            }
-            buf.append(",");
-        }
-        buf.delete(buf.length() - 1, buf.length()); // remove last ","
-        return buf.toString();
-    }
     /**
      * Reads in SimpleFeature that has been encoded into a line of text.
      *
@@ -2001,8 +1991,6 @@ public class DataUtilities {
      *   <li>Multi-line support using escaped line-feed characters
      *       <ul>
      *
-     * @param featureType
-     * @param line
      * @return SimpleFeature defined by the provided line of text
      */
     public static SimpleFeature createFeature(SimpleFeatureType featureType, String line) {
@@ -2097,10 +2085,6 @@ public class DataUtilities {
      *   <li>Handling: <code>"<null>"</code> as an explicit marker flag for a null value
      *   <li>Using {@link #decodeEscapedCharacters(String)} to unpack the raw text
      *   <li>Using {@link Converters} to convert the text to the requested value
-     *
-     * @param descriptor
-     * @param rawText
-     * @return
      */
     private static Object createValue(AttributeDescriptor descriptor, String rawText) {
         String stringValue = null;
@@ -2202,7 +2186,6 @@ public class DataUtilities {
      * @param fid Feature ID for new feature
      * @param text Text representation of values
      * @return newly created feature
-     * @throws IllegalAttributeException
      */
     public static SimpleFeature parse(SimpleFeatureType type, String fid, String[] text)
             throws IllegalAttributeException {
@@ -2240,7 +2223,6 @@ public class DataUtilities {
     /**
      * Used to encode common whitespace characters and | character for safe transport.
      *
-     * @param txt
      * @return txt encoded for storage
      * @see PropertyAttributeReader#decodeString(String)
      */
@@ -2289,7 +2271,6 @@ public class DataUtilities {
      *   <li>{@link SortBy#NATURAL_ORDER}: As sorting by FeatureID
      * </ul>
      *
-     * @param sortBy
      * @return Comparator suitable for use with Arrays.sort( SimpleFeature[], comparator )
      */
     public static Comparator<SimpleFeature> sortComparator(SortBy sortBy) {
@@ -2353,6 +2334,8 @@ public class DataUtilities {
      *       must create the query with the names of the properties you want to load.
      *   <li>filter: the filters of both queries are or'ed, then simplified using
      *       SimplifiyingFilterVisitor
+     *   <li>sort: if the second query has a sorting it's used for output, otherwise the one of the
+     *       first is used
      *   <li><b>any other query property is ignored</b> and no guarantees are made of their return
      *       values, so client code shall explicitly care of hints, startIndex, etc., if needed.
      * </ul>
@@ -2433,10 +2416,18 @@ public class DataUtilities {
                 firstQuery.getTypeName() != null
                         ? firstQuery.getTypeName()
                         : secondQuery.getTypeName();
+        // check the sort
+        SortBy[] sort;
+        if (secondQuery.getSortBy() != null && secondQuery.getSortBy().length > 0) {
+            sort = secondQuery.getSortBy();
+        } else {
+            sort = firstQuery.getSortBy();
+        }
 
         Query mixed = new Query(typeName, filter, maxFeatures, propNames, handle);
         mixed.setVersion(version);
         mixed.setHints(hints);
+        mixed.setSortBy(sort);
         if (start != 0) {
             mixed.setStartIndex(start);
         }
@@ -2525,7 +2516,6 @@ public class DataUtilities {
      * @param type feature type
      * @param oldProps given list of properties
      * @return list of properties including all mandatory properties
-     * @throws IOException
      */
     public static List<PropertyName> addMandatoryProperties(
             SimpleFeatureType type, List<PropertyName> oldProps) {
@@ -2555,7 +2545,6 @@ public class DataUtilities {
      * <p>Will parse a String of the form: <i>"name:Type:hint" as described in {@link
      * #createType}</i>
      *
-     * @param typeSpec
      * @see #createType
      * @throws SchemaException If typeSpect could not be interpreted
      */
@@ -2647,7 +2636,6 @@ public class DataUtilities {
      * is intended for FeatureCollection implementors and test case verification. Client code should
      * always call {@link FeatureCollection#size()}
      *
-     * @param collection
      * @return number of featuers in feature collection
      */
     public static int count(FeatureIterator<?> iterator) {
@@ -2673,7 +2661,6 @@ public class DataUtilities {
      * <p>This implementation is intended for FeatureCollection implementors and test case
      * verification. Client code should always call {@link FeatureCollection#size()}
      *
-     * @param collection
      * @return number of featuers in feature collection
      */
     public static int count(
@@ -2697,9 +2684,6 @@ public class DataUtilities {
      * Manually calculate the bounds from the provided FeatureIteator. This implementation is
      * intended for FeatureCollection implementors and test case verification. Client code should
      * always call {@link FeatureCollection#getBounds()}.
-     *
-     * @param iterator
-     * @return
      */
     public static ReferencedEnvelope bounds(FeatureIterator<?> iterator) {
         if (iterator == null) {
@@ -2734,7 +2718,6 @@ public class DataUtilities {
      * <p>This implementation is intended for FeatureCollection implementors and test case
      * verification. Client code should always call {@link FeatureCollection#getBounds()}.
      *
-     * @param collection
      * @return bounds of features in feature collection
      */
     public static ReferencedEnvelope bounds(
@@ -2806,23 +2789,6 @@ public class DataUtilities {
                 iterator.close();
             }
         }
-    }
-
-    /** @deprecated Use {@link URLs#changeUrlExt(URL, String)} */
-    public static URL changeUrlExt(URL url, String postfix) throws IllegalArgumentException {
-        return URLs.changeUrlExt(url, postfix);
-    }
-
-    /** @deprecated Use {@link URLs#getParentUrl(URL)}. */
-    public static URL getParentUrl(URL url) throws MalformedURLException {
-        return URLs.getParentUrl(url);
-    }
-
-    /**
-     * @deprecated Use {@link URLs#extendUrl(URL, String)
-     */
-    public static URL extendURL(URL base, String extension) throws MalformedURLException {
-        return URLs.extendUrl(base, extension);
     }
 
     /**
@@ -2913,7 +2879,6 @@ public class DataUtilities {
      *
      * </code></pre>
      *
-     * @param params
      * @param arrayParameters Array of parameters returned by DataAccessFactory.getParametersInfo()
      * @return true if params is in agreement with getParametersInfo, override for additional
      *     checks.
