@@ -16,6 +16,10 @@
  */
 package org.geotools.filter;
 
+import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
+import org.geotools.util.Converters;
 import org.opengis.filter.expression.BinaryExpression;
 
 /**
@@ -57,11 +61,7 @@ public abstract class MathExpressionImpl extends DefaultExpression implements Bi
         return leftValue;
     }
 
-    /**
-     * Gets the left or first expression.
-     *
-     * @throws IllegalFilterException
-     */
+    /** Gets the left or first expression. */
     public void setExpression1(org.opengis.filter.expression.Expression expression) {
         if (isGeometryExpression(Filters.getExpressionType(expression))) {
             throw new IllegalFilterException(
@@ -79,11 +79,7 @@ public abstract class MathExpressionImpl extends DefaultExpression implements Bi
         return rightValue;
     }
 
-    /**
-     * Gets the second expression.
-     *
-     * @throws IllegalFilterException
-     */
+    /** Gets the second expression. */
     public void setExpression2(org.opengis.filter.expression.Expression expression) {
         // Check to see if this is a valid math expression before adding.
         if (isGeometryExpression(Filters.getExpressionType(expression))) {
@@ -107,6 +103,40 @@ public abstract class MathExpressionImpl extends DefaultExpression implements Bi
 
     protected Object number(double number) {
         // return Filters.puts( number );  // non strongly typed
-        return new Double(number); // Getools 2.1 style
+        return Double.valueOf(number); // Getools 2.1 style
     }
+
+    protected Object handleCollection(Object value1, Object value2) {
+        List<Number> numericList;
+        final Number scalar;
+        if (value1 instanceof Collection && value2 instanceof Collection) {
+            throw new RuntimeException("Both Maths expressions cannot be Collections");
+        } else if (value1 instanceof Collection) {
+            // first is collection, second is scalar
+            numericList =
+                    (List)
+                            ((Collection) value1)
+                                    .stream()
+                                    .map(v -> Converters.convert(v, Number.class))
+                                    .collect(Collectors.toList());
+            scalar = Filters.number(value2);
+
+        } else {
+            // second is collection, first is scalar
+            numericList =
+                    (List)
+                            ((Collection) value2)
+                                    .stream()
+                                    .map(v -> Converters.convert(v, Number.class))
+                                    .collect(Collectors.toList());
+            scalar = Filters.number(value1);
+        }
+
+        return numericList
+                .stream()
+                .map(n -> doArithmeticOperation(n.doubleValue(), scalar.doubleValue()))
+                .collect(Collectors.toList());
+    }
+
+    protected abstract Object doArithmeticOperation(Double operand1, Double operand2);
 }
