@@ -48,7 +48,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
         GeometryFactory gf = new GeometryFactory();
         builder.add(gf.createPoint(new Coordinate(0, 0)));
         builder.add(Integer.valueOf(1));
-        builder.add(new Float(2.0));
+        builder.add(Float.valueOf(2.0f));
 
         SimpleFeature feature = builder.buildFeature("fid");
         assertNotNull(feature);
@@ -57,7 +57,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
 
         assertTrue(gf.createPoint(new Coordinate(0, 0)).equals(feature.getAttribute("point")));
         assertEquals(Integer.valueOf(1), feature.getAttribute("integer"));
-        assertEquals(new Float(2.0), feature.getAttribute("float"));
+        assertEquals(Float.valueOf(2.0f), feature.getAttribute("float"));
     }
 
     public void testTooFewAttributes() throws Exception {
@@ -79,7 +79,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
         GeometryFactory gf = new GeometryFactory();
         builder.set("point", gf.createPoint(new Coordinate(0, 0)));
         builder.set("integer", Integer.valueOf(1));
-        builder.set("float", new Float(2.0));
+        builder.set("float", Float.valueOf(2.0f));
 
         SimpleFeature feature = builder.buildFeature("fid");
         assertNotNull(feature);
@@ -88,12 +88,12 @@ public class SimpleFeatureBuilderTest extends TestCase {
 
         assertTrue(gf.createPoint(new Coordinate(0, 0)).equals(feature.getAttribute(0)));
         assertEquals(Integer.valueOf(1), feature.getAttribute(1));
-        assertEquals(new Float(2.0), feature.getAttribute(2));
+        assertEquals(Float.valueOf(2.0f), feature.getAttribute(2));
     }
 
     public void testSetNonSequential() throws Exception {
         GeometryFactory gf = new GeometryFactory();
-        builder.set("float", new Float(2.0));
+        builder.set("float", Float.valueOf(2.0f));
         builder.set("point", gf.createPoint(new Coordinate(0, 0)));
         builder.set("integer", Integer.valueOf(1));
 
@@ -104,7 +104,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
 
         assertTrue(gf.createPoint(new Coordinate(0, 0)).equals(feature.getAttribute(0)));
         assertEquals(Integer.valueOf(1), feature.getAttribute(1));
-        assertEquals(new Float(2.0), feature.getAttribute(2));
+        assertEquals(Float.valueOf(2.0f), feature.getAttribute(2));
     }
 
     public void testSetTooFew() throws Exception {
@@ -177,13 +177,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
     }
 
     public void testUserData() throws Exception {
-        GeometryFactory gf = new GeometryFactory();
-        builder.add(gf.createPoint(new Coordinate(0, 0)));
-        builder.add(Integer.valueOf(1));
-        builder.add(new Float(2.0));
-        builder.featureUserData("foo", "bar");
-
-        SimpleFeature feature = builder.buildFeature("fid");
+        SimpleFeature feature = buildUserDataFeature();
         assertNotNull(feature);
         assertEquals("bar", feature.getUserData().get("foo"));
 
@@ -191,6 +185,29 @@ public class SimpleFeatureBuilderTest extends TestCase {
         builder.init(feature);
         feature = builder.buildFeature("fid");
         assertNotNull(feature);
+        assertEquals("bar", feature.getUserData().get("foo"));
+    }
+
+    private SimpleFeature buildUserDataFeature() {
+        GeometryFactory gf = new GeometryFactory();
+        builder.add(gf.createPoint(new Coordinate(0, 0)));
+        builder.add(Integer.valueOf(1));
+        builder.add(Float.valueOf(2.0f));
+        builder.featureUserData("foo", "bar");
+
+        return builder.buildFeature("fid");
+    }
+
+    public void testCopyUserData() throws Exception {
+        SimpleFeature template = buildUserDataFeature();
+        builder = new SimpleFeatureBuilder(template.getFeatureType());
+        GeometryFactory gf = new GeometryFactory();
+        builder.add(gf.createPoint(new Coordinate(1, 1)));
+        builder.add(Integer.valueOf(2));
+        builder.add(Float.valueOf(4.0f));
+        builder.featureUserData(template);
+        SimpleFeature feature = builder.buildFeature("myfid");
+
         assertEquals("bar", feature.getUserData().get("foo"));
     }
 }
